# better-calories-rust-backend

./: .env.example  Cargo.toml  endpoints.md  readme.md
migrations/: 20240917023557_create_initial_schema.sql  20240917044036_auto_increment_id.sql
src/: config.rs  db.rs  error.rs  main.rs  routes.rs  schema.rs
src/features/: mod.rs
src/features/day/: handler.rs  model.rs  routes.rs  service.rs
src/features/food_item/: handler.rs  model.rs  routes.rs  service.rs
src/features/meal/: handler.rs  model.rs  routes.rs  service.rs
src/features/user/: handler.rs  model.rs  routes.rs  service.rs
