[package]
name = "better-calories-rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
tracing-subscriber = "0.3.18"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
